[B]Version 1.1.23[/B]
Fix camsoda audio
