@@ -1,0 +1,3 @@
+Site URL: https://voyeur-house.to/
+DMCA: https://voyeur-house.to/static/dmca
+Contact: https://voyeur-house.to/feedback
